fix navbar overlap problem

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -69,6 +69,7 @@ h1, h2, h3, h4, h5, h6, .navbar {
   background-color: rgba(0,0,0,0.5);
   border: 1px solid #ccc;
   border-color: black;
+  margin-top:50px;
 }
 /* User sign in and sign forms. */
 .border-form-div {
